<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
<LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#8BC34A">

    <LinearLayout
            style="@style/LinearLayout"
            android:layout_marginTop="20dp">
        <ImageButton
                android:id="@+id/button1"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView1"
                android:text="@string/Main1"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button2"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView2"
                android:text="@string/Main2"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button3"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView3"
                android:text="@string/Main3"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button4"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView4"
                android:text="@string/Main4"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button5"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView5"
                android:text="@string/Main5"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button6"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView6"
                android:text="@string/Main6"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button7"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView7"
                android:text="@string/Main7"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button8"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView8"
                android:text="@string/Main8"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button9"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView9"
                android:text="@string/Main9"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button10"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView10"
                android:text="@string/Main10"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button11"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView11"
                android:text="@string/Main11"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button12"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView12"
                android:text="@string/Main12"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button13"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView13"
                android:text="@string/Main13"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button14"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView14"
                android:text="@string/Main14"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button15"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView15"
                android:text="@string/Main15"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button16"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView16"
                android:text="@string/Main16"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button17"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView17"
                android:text="@string/Main17"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button18"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView18"
                android:text="@string/Main18"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button19"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView19"
                android:text="@string/Main19"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button20"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView20"
                android:text="@string/Main20"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button21"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView21"
                android:text="@string/Main21"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button22"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView22"
                android:text="@string/Main22"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button23"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView23"
                android:text="@string/Main23"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button24"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView24"
                android:text="@string/Main24"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button25"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView25"
                android:text="@string/Main25"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button26"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"
                tools:ignore="TooManyViews"/>
        <TextView
                android:id="@+id/textView26"
                android:text="@string/Main26"
                style="@style/TextStyle"
                tools:ignore="TooManyViews"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button27"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView27"
                android:text="@string/Main27"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button28"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView28"
                android:text="@string/Main28"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button29"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView29"
                android:text="@string/Main29"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button30"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView30"
                android:text="@string/Main30"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button31"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView31"
                android:text="@string/Main31"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button32"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView32"
                android:text="@string/Main32"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button33"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView33"
                android:text="@string/Main33"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button34"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView34"
                android:text="@string/Main34"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button35"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView35"
                android:text="@string/Main35"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button36"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView36"
                android:text="@string/Main36"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button37"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView37"
                android:text="@string/Main37"
                style="@style/TextStyle"/>
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayout">
        <ImageButton
                android:id="@+id/button38"
                android:contentDescription="@string/todo"
                style="@style/ButtonStyle"/>
        <TextView
                android:id="@+id/textView38"
                android:text="@string/Main38"
                style="@style/TextStyle"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>