<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#76E0ED"
        tools:ignore="ExtraText">

    <TextView
            android:text="@string/Act20_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/Act20_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act20_add"
                android:onClick="onclick"
                tools:ignore="ButtonStyle">
        </Button>
        <Button
                android:id="@+id/Act20_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act20_delete"
                android:onClick="onclick"
                tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
    <TextView
            android:text="@string/Act20_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/Act20_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act20_dialog"
                android:onClick="onclick">
        </Button>
    </LinearLayout>
    <TextView
            android:text="@string/Act20_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/Act20_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act20_default"
                android:onClick="onclick"
                tools:ignore="ButtonStyle">
        </Button>
        <Button
                android:id="@+id/Act20_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act20_horizontal"
                android:onClick="onclick"
                tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>