<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/Act33_btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/Act33_add">
        </Button>
        <Button
                android:id="@+id/Act33_btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/Act33_remove">
        </Button>
        <Button
                android:id="@+id/Act33_btnReplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/Act33_replace">
        </Button>
        <CheckBox
                android:id="@+id/Act33_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act33_stack">
        </CheckBox>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <Button
            android:id="@+id/Act33_btnSendMess1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/Act33_send_to_frag_1"
            tools:ignore="ButtonStyle">
    </Button>
    <Button
            android:id="@+id/Act33_btnSendMess2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/Act33_send_to_frag_2"
            tools:ignore="ButtonStyle">
    </Button>
    </LinearLayout>
    <TextView
            android:id="@+id/Act33_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"/>
    <FrameLayout
            android:id="@+id/Act33_frgmCont"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>