<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#9DCFF6">
    <LinearLayout
            android:layout_marginTop="150dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <Button
                android:id="@+id/Act31_btnStart"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:text="@string/Act29_start_service"
                tools:ignore="ButtonStyle">
        </Button>
        <Button
                android:id="@+id/Act31_btnStop"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:text="@string/Act29_stop_service"
                tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <Button
                android:layout_gravity="center"
                android:id="@+id/Act31_btnStartBind"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:text="@string/Act31_start_bind"
                tools:ignore="ButtonStyle">
        </Button>
        <Button
                android:layout_gravity="center"
                android:id="@+id/Act31_btnStopBind"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:text="@string/Act31_stop_bind"
                tools:ignore="ButtonStyle">
        </Button>
        <Button
                android:layout_gravity="center"
                android:id="@+id/Act31_btnStartBindTask"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:text="@string/Act31_start_bind_task"
                tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>